# uiflow-custom-block-generator

./: .gitignore  Pipfile  README.md  README_ja_JP.md  setup.cfg  uiflow-custom-block-generator.py
examples/atom_babies/: atom_babies.json  atom_babies.m5b  clear_cheeks.py  clear_face.py  close_eyes.py  fill_face.py  get_blink_interval_values.py  get_orientation.py  get_orientation_left.py  get_orientation_normal.py  get_orientation_right.py  get_orientation_upside_down.py  get_version.py  init_atom_babies.py  is_auto_orientation.py  is_blinking.py  open_eyes.py  rgb.py  scroll_digits.py  scroll_text.py  set_auto_orientation.py  set_char.py  set_digit.py  set_face_position_bottom.py  set_face_position_down.py  set_face_position_left.py  set_face_position_normal.py  set_face_position_right.py  set_face_position_top.py  set_face_position_up.py  set_orientation.py  set_orientation_left.py  set_orientation_normal.py  set_orientation_right.py  set_orientation_upside_down.py  show_cheeks.py  show_face.py  start_blink.py  start_blink_with_function.py  stop_blink.py  (+1 more)
uiflow_custom_block_generator/: __init__.py  __main__.py  uiflow_custom_block.py  uiflow_custom_block_generator.py  uiflow_custom_block_parser.py
