[metadata]
name = uiflow_custom_block_generator
version = 0.0.2
author = SAITO Tetsuya
author_email = saito.tetsuya+github@gmail.com
description = Generating a custom block file for UiFlow
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/3110/uiflow-custom-block-generator
project_urls =
    Bug Tracker = https://github.com/3110/uiflow-custom-block-generator/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = .
packages = find:
python_requires = >=3.6

[options.packages.find]
where = .